test/conformance/chainsaw/validate/clusterpolicy/cornercases/cel-messages-upon-resource-failure/pod-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver-pod
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - hostPort: 80
      containerPort: 8080
