test/conformance/chainsaw/validate/clusterpolicy/cornercases/cel-messages-upon-resource-failure/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cel-messages-upon-resource-failure
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: disallow-host-port-in-pods
  - name: step-02
    try:
    - script:
        content: kubectl apply -f pod-fail.yaml
        check:
          # This check below ensures that the string 'hostPort must either be unset or set to 0' is found in stderr or else fails
          (contains($stderr, 'hostPort must either be unset or set to 0')): true
